[package]
name = "tt-equal"
version = "0.1.2"
authors = ["Emad Jacob Maroun <emoun.open@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "The macro `tt_equal` acts as a predicate for whether two token trees are equal."
repository = "https://github.com/Emoun/tt-equal"
documentation = "https://docs.rs/tt-equal"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
tt-call = "1.0"

[dev-dependencies]

[badges]
travis-ci = { repository = "Emoun/tt-equal" }
maintenance = { status = "experimental" }